--- a/Website/load/loadmanage/templates/loadmanage/login.html
+++ b/Website/load/loadmanage/templates/loadmanage/login.html
@@ -1,3 +1,7 @@
+{% block css %}
+    {% include "loadmanage/template_css.html" %}
+{% endblock %}
+{% block content %}
 <!DOCTYPE html>
 <html lang="en">
 
@@ -11,20 +15,20 @@
 
     <title>SB Admin 2 - Bootstrap Admin Theme</title>
 
-    <!-- Bootstrap Core CSS -->
+    <!-- Bootstrap Core CSS
     <link href="../vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
 
-    <!-- MetisMenu CSS -->
+    MetisMenu CSS
     <link href="../vendor/metisMenu/metisMenu.min.css" rel="stylesheet">
 
-    <!-- Custom CSS -->
+    Custom CSS
     <link href="../dist/css/sb-admin-2.css" rel="stylesheet">
 
-    <!-- Custom Fonts -->
+    Custom Fonts
     <link href="../vendor/font-awesome/css/font-awesome.min.css" rel="stylesheet" type="text/css">
 
-    <!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
-    <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
+    HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries
+    WARNING: Respond.js doesn't work if you view the page via file:// -->
     <!--[if lt IE 9]>
         <script src="https://oss.maxcdn.com/libs/html5shiv/3.7.0/html5shiv.js"></script>
         <script src="https://oss.maxcdn.com/libs/respond.js/1.4.2/respond.min.js"></script>
@@ -55,7 +59,7 @@
                                         <input name="remember" type="checkbox" value="Remember Me">Remember Me
                                     </label>
                                 </div>
-                                <!-- Change this to a button or input when using this as a form -->
+                                Change this to a button or input when using this as a form 
                                 <a href="index.html" class="btn btn-lg btn-success btn-block">Login</a>
                             </fieldset>
                         </form>
@@ -65,18 +69,19 @@
         </div>
     </div>
 
-    <!-- jQuery -->
-    <script src="../vendor/jquery/jquery.min.js"></script>
+    <!-- jQuery 
+        <script src="../vendor/jquery/jquery.min.js"></script>
 
-    <!-- Bootstrap Core JavaScript -->
+    Bootstrap Core JavaScript
     <script src="../vendor/bootstrap/js/bootstrap.min.js"></script>
 
-    <!-- Metis Menu Plugin JavaScript -->
+    Metis Menu Plugin JavaScript
     <script src="../vendor/metisMenu/metisMenu.min.js"></script>
 
-    <!-- Custom Theme JavaScript -->
-    <script src="../dist/js/sb-admin-2.js"></script>
+    Custom Theme JavaScript
+    <script src="../dist/js/sb-admin-2.js"></script> -->
 
 </body>
 
 </html>
+{% endblock %}
