--- a/website/woo/templates/complain.html
+++ b/website/woo/templates/complain.html
@@ -32,7 +32,7 @@
         <div class="col-md-3 left_col">
           <div class="left_col scroll-view">
             <div class="navbar nav_title" style="border: 0;">
-              <a href="" class="site_title"><i class="fa fa-bolt"></i><span>&emsp;Smart Energy</span></a>
+              <a href="/" class="site_title"><i class="fa fa-bolt"></i><span>&emsp;Smart Energy</span></a>
             </div>
             <!-- sidebar menu -->
             <div id="sidebar-menu" class="main_menu_side hidden-print main_menu">
@@ -88,7 +88,7 @@
             {% block content %}
             <form action="/load/complaint/" method="post">{%  csrf_token %}
             <ul>
-                {{ form.as_ul }}
+                {{ form.as_p }}
             </ul>
             <input type="submit" name="submit" value="Send Complain">
             </form>
