--- a/website/woo/templates/appliance.html
+++ b/website/woo/templates/appliance.html
@@ -9,7 +9,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
-    <title>Smart Energy Monitoring | Dashboard | Welcome </title>
+    <title>Appliance</title>
 
     <!-- Bootstrap -->
     <link href="{% static 'vendors/bootstrap/dist/css/bootstrap.min.css' %}" rel="stylesheet">
@@ -32,7 +32,7 @@
         <div class="col-md-3 left_col">
           <div class="left_col scroll-view">
             <div class="navbar nav_title" style="border: 0;">
-              <a href="/" class="site_title"><i class="fa fa-bolt"></i><span>&emsp;Smart Energy</span></a>
+              <a href="/load/dashboard/" class="site_title"><i class="fa fa-bolt"></i><span>&emsp;Smart Energy</span></a>
             </div>
             <!-- sidebar menu -->
             <div id="sidebar-menu" class="main_menu_side hidden-print main_menu">
@@ -74,12 +74,6 @@
             <div class="row top_tiles" style="margin: 10px 0;">
             <div class="row">
             <div class="col-md-4 col-sm-4 col-xs-4 form-group pull-right top_search">
-                  <div class="input-group">
-                    <input type="text" class="form-control" placeholder="Search for...">
-                    <span class="input-group-btn">
-                      <button class="btn btn-default" type="button">Go!</button>
-                    </span>
-                  </div>
                 </div>
              </div>
             </div>
