--- a/website/woo/templates/sel.html
+++ b/website/woo/templates/sel.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 {% load staticfiles %}
 <html lang="en">
-
+  {% block content %}
   <head>
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
     <!-- Meta, title, CSS, favicons, etc. -->
@@ -9,7 +9,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
-    <title>Smart Energy Monitoring | Dashboard | Welcome </title>
+    <title>Select Device</title>
 
     <!-- Bootstrap -->
     <link href="{% static 'vendors/bootstrap/dist/css/bootstrap.min.css' %}" rel="stylesheet">
@@ -32,23 +32,17 @@
         <div class="col-md-3 left_col">
           <div class="left_col scroll-view">
             <div class="navbar nav_title" style="border: 0;">
-              <a href="/" class="site_title"><i class="fa fa-bolt"></i><span>&emsp;Smart Energy</span></a>
+              <a href="/load/dashboard/" class="site_title"><i class="fa fa-bolt"></i><span>&emsp;Smart Energy</span></a>
             </div>
             <!-- sidebar menu -->
             <div id="sidebar-menu" class="main_menu_side hidden-print main_menu">
               <div class="menu_section">
                 <br>
                 <br>
-                <ul class="nav side-menu">
-                  <li><a href='/load/appliance'><i class="fa fa-home"></i> Add Appliance </a>
-                  </li>
-                  <li><a href='/load/use'><i class="fa fa-edit"></i> Add Usage </a>
-                  </li>
+                <ul class="nav side-menu" style="margin-top:50px">
                   <li><a href='/load/sel'><i class="fa fa-desktop"></i> Select Device </a>
                   </li>
                   <li><a href='/load/complaint'><i class="fa fa-bar-chart-o"></i> Complaint </a>
-                  </li>
-                  <li><a href='/admin'><i class="fa fa-table"></i> Open Admin </a>
                   </li>
                 </ul>
               </div>
@@ -63,6 +57,14 @@
               <div class="nav toggle">
                 <a id="menu_toggle"><i class="fa fa-bars"></i></a>
               </div>
+              <div class="nav navbar-nav navbar-right">
+                  <h5>
+                    Welcome {{name}}
+                    (
+                    <a href='/load/logout'>Logout </a>
+                    )
+                  </h5>
+              </div>
             </nav>
           </div>
         </div>
@@ -74,21 +76,13 @@
             <div class="row top_tiles" style="margin: 10px 0;">
             <div class="row">
             <div class="col-md-4 col-sm-4 col-xs-4 form-group pull-right top_search">
-                  <div class="input-group">
-                    <input type="text" class="form-control" placeholder="Search for...">
-                    <span class="input-group-btn">
-                      <button class="btn btn-default" type="button">Go!</button>
-                    </span>
-                  </div>
-                </div>
+             </div>
              </div>
             </div>
             <h1>Select a device</h1>
-            {% block content %}
               {% for a in aa %}
                 <h3><a href ="/load/{{a.id}}">{{a.appliance}}</a><br></h3>
               {% endfor %}
-            {% endblock %}
             </div>
         </div>
       </div>
@@ -134,6 +128,6 @@
 
     <!-- Custom Theme Scripts -->
     <script src="{% static 'js/custom.min.js' %}"></script>
-
   </body>
+  {% endblock %}
 </html>
